objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Australian Services</fullName>
        <description>Created to include the Australian stages for their opportunities.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - DNB %28did not bid%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Negotiations</fullName>
        </values>
        <values>
            <fullName>Pending Decision</fullName>
        </values>
        <values>
            <fullName>Pending RFP</fullName>
        </values>
        <values>
            <fullName>Proposal Prep</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted - ongoing development</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Shelved%2FClient Not Proceeding</fullName>
        </values>
        <values>
            <fullName>Shortlisted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Development</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0%2E Site Selection</fullName>
        </values>
        <values>
            <fullName>1%2E Concept%2FProspecting</fullName>
        </values>
        <values>
            <fullName>2%2E Early Stage</fullName>
        </values>
        <values>
            <fullName>3%2E Mid Stage</fullName>
        </values>
        <values>
            <fullName>4%2E Late Stage</fullName>
        </values>
        <values>
            <fullName>5%2E In Construction</fullName>
        </values>
        <values>
            <fullName>6%2E Operational</fullName>
        </values>
        <values>
            <fullName>7%2E General Development</fullName>
        </values>
        <values>
            <fullName>8%2E Construction Bids</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Distributed Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - DNB %28did not bid%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiations</fullName>
        </values>
        <values>
            <fullName>Pending Bid Decision</fullName>
        </values>
        <values>
            <fullName>Proposal Preparation</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Shortlist</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Investor Transaction Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - DNB %28did not bid%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Exclusivity Signed</fullName>
        </values>
        <values>
            <fullName>Investor Prospecting</fullName>
        </values>
        <values>
            <fullName>NBO Submitted</fullName>
        </values>
        <values>
            <fullName>Pre NBO discussion</fullName>
        </values>
        <values>
            <fullName>Shelved%2FClient Not Proceeding</fullName>
        </values>
        <values>
            <fullName>Tender Pack Received</fullName>
        </values>
        <values>
            <fullName>Transaction%2FSale Contract Negotiations</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Origination</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - DNB %28did not bid%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiations</fullName>
        </values>
        <values>
            <fullName>Pending RFP%2FPQQ</fullName>
        </values>
        <values>
            <fullName>Preferred Supplier%2FNOA</fullName>
        </values>
        <values>
            <fullName>Proposal Preparation</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Shelved%2FClient Not Proceeding</fullName>
        </values>
        <values>
            <fullName>Shortlist</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RFP Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - DNB %28did not bid%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiations</fullName>
        </values>
        <values>
            <fullName>Pending Bid Decision</fullName>
        </values>
        <values>
            <fullName>Pending RFP%2FPQQ</fullName>
        </values>
        <values>
            <fullName>Preferred Supplier%2FNOA</fullName>
        </values>
        <values>
            <fullName>Proposal Preparation</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Shelved%2FClient Not Proceeding</fullName>
        </values>
        <values>
            <fullName>Shortlist</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Services Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - DNB %28did not bid%29</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiations</fullName>
        </values>
        <values>
            <fullName>Pending Bid Decision</fullName>
        </values>
        <values>
            <fullName>Pending RFP%2FPQQ</fullName>
        </values>
        <values>
            <fullName>Preferred Supplier%2FNOA</fullName>
        </values>
        <values>
            <fullName>Proposal Preparation</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Shelved%2FClient Not Proceeding</fullName>
        </values>
        <values>
            <fullName>Shortlist</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AUS_Follow_Up_Date__c</fullName>
        <label>Follow-Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AUS_Identified_Date__c</fullName>
        <label>Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AUS_Last_Contact__c</fullName>
        <label>Last Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AUS_Weighted_Probability__c</fullName>
        <description>Probability that an opportunity</description>
        <formula>( Aus_Probability_of_Execution__c ) * ( Probability )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Probability (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>IF(ISPICKVAL(Account.Account_Type__c , &quot;IOU&quot;), &quot;Public Power&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;IPP&quot;), &quot;Public Power&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;Municipal (MOU)&quot;), &quot;Public Power&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;Coop&quot;), &quot;Public Power&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;DistCoop&quot;), &quot;Public Power&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;Non-Muni Govt&quot;), &quot;Public Power&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;CCA&quot;), &quot;Public Power&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;C&amp;I&quot;), &quot;C&amp;I&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;University&quot;), &quot;C&amp;I&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;Developer&quot;), &quot;C&amp;I&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;Trading Desk&quot;), &quot;C&amp;I&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;REC Broker&quot;), &quot;C&amp;I&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;Power Broker&quot;), &quot;C&amp;I&quot;,
IF(ISPICKVAL(Account.Account_Type__c , &quot;Non-Muni Govt&quot;), &quot;C&amp;I&quot;,&quot;&quot;
))))))
)))))
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C&amp;I/Public Power</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Additional_O_M_Comments__c</fullName>
        <description>Needed for Support Services. All Technologies.</description>
        <inlineHelpText>Please include any special requests from the Owner here, as well as any other relevant details about the O&amp;M, or Equipment of this project.</inlineHelpText>
        <label>Additional O&amp;M Comments</label>
        <length>2768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>All_Projects_Bid__c</fullName>
        <description>Used solely by the Origination Team. Created for reporting purposes, so that instead of having a separate row for each PPA Bid / Project Development, all those project names can be captured in one cell / row.</description>
        <inlineHelpText>Please list out the names of all the Project Developments that are associated to this Opportunity.</inlineHelpText>
        <label>All Projects Bid</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alt_BL_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alt. BL Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Expected_Revenue__c</fullName>
        <description>The Annual Expected Revenue is calculated by multiplying the Annual Amount and Probability of an Opportunity</description>
        <formula>O_M_Price_yr__c   *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Revenue = Annual Amount * Probability</inlineHelpText>
        <label>Annual Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Management_Mobilisation_Fee__c</fullName>
        <label>Asset Management Mobilisation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Management_Services_Fee__c</fullName>
        <label>Asset Management Services Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Augmentation_3_Year__c</fullName>
        <label>Augmentation 3 (Year)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aus_Annual_Expected_Revenue__c</fullName>
        <description>Australia&apos;s Annual Expected Revenue is calculated by multiplying the Annual Amount and Weighted Probability of an Opportunity</description>
        <formula>O_M_Price_yr__c *  AUS_Weighted_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Annual Amount * Weighted Probability</inlineHelpText>
        <label>Annual Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aus_Expected_Profit__c</fullName>
        <formula>Aus_Expected_Revenue__c *  Gross_Profit_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Expected Revenue &amp; Gross Profit Margin %</inlineHelpText>
        <label>Expected Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aus_Expected_Revenue__c</fullName>
        <formula>Amount *  AUS_Weighted_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>= Amount * Weighted Probability</inlineHelpText>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aus_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to &apos;flag&apos; an opportunity for further review from the Australian users.</description>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aus_Probability_of_Execution__c</fullName>
        <description>Created for the Australian team to estimate the probability that the project(s) within an opportunity are actually going to start construction.</description>
        <label>Probability of Execution (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Aus_Project_Developer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Created for the Australian team to identify which company (account) developed the project(s) listed on the opportunity.</description>
        <label>Project Developer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Project Developer)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aus_Pursuit_Status__c</fullName>
        <description>Created for the Australian team to identify if they are actively pursuing an opportunity</description>
        <label>Pursuit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aus_Service_Type__c</fullName>
        <label>Service Type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Construction Management</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Portfolio Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aus_Total_Capacity_MW__c</fullName>
        <inlineHelpText>Calculates the total capacity of all assets related to the opportunity</inlineHelpText>
        <label>Total Capacity (MW)</label>
        <summarizedField>SS_Assets_for_Opportunity__c.Display_Asset_Capacity__c</summarizedField>
        <summaryForeignKey>SS_Assets_for_Opportunity__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Aus_kW__c</fullName>
        <formula>IF( Aus_Total_Capacity_MW__c &lt; 1, 0 ,  Amount /  Aus_Total_Capacity_MW__c / 1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount /  Total Capacity (MW) / 1000</inlineHelpText>
        <label>$/kW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BL_Sum_Margin__c</fullName>
        <formula>Dev_Margin__c + Wind_Constr_Margin__c + Solar_Constr_Margin__c +  Storage_Margin__c +  T_D_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BL Sum - Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BL_Sum__c</fullName>
        <formula>Development_Revenue__c  + Storage_Revenue__c +  Wind_Constr_Revenue__c +  Solar_Constr_Revenue__c + Transmission_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BL Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BOP_KW__c</fullName>
        <label>$BOP/kW</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Battery_Manufacturer__c</fullName>
        <label>Battery Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BYD</fullName>
                </value>
                <value>
                    <fullName>LG Chem</fullName>
                </value>
                <value>
                    <fullName>Narada</fullName>
                </value>
                <value>
                    <fullName>Panasonic</fullName>
                </value>
                <value>
                    <fullName>Samsung SDI</fullName>
                </value>
                <value>
                    <fullName>Tesla</fullName>
                </value>
                <value>
                    <fullName>Toshiba</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BidComm_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BidComm Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Type__c</fullName>
        <label>Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indicative - Initial</fullName>
                </value>
                <value>
                    <fullName>Indicative - Rebid</fullName>
                </value>
                <value>
                    <fullName>Firm Bid - Initial</fullName>
                </value>
                <value>
                    <fullName>Firm Bid - Rebid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bids_Submitted__c</fullName>
        <inlineHelpText>Storage Specific Field</inlineHelpText>
        <label>Bids Submitted</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will automatically fill out if you input a value into the &quot;Broker Contact&quot; field instead.</inlineHelpText>
        <label>Broker Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Broker Account)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if there is no Broker associated with this Opportunity.</inlineHelpText>
        <label>Broker Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Broker Contact)</relationshipLabel>
        <relationshipName>BrokeredOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <label>Broker Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Origination</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Wind Const</fullName>
                </value>
                <value>
                    <fullName>Solar Const</fullName>
                </value>
                <value>
                    <fullName>T&amp;D</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Support Services</fullName>
                </value>
                <value>
                    <fullName>Dev - CAN</fullName>
                    <isActive>false</isActive>
                    <label>Dev - CAN</label>
                </value>
                <value>
                    <fullName>Dev - North</fullName>
                    <isActive>false</isActive>
                    <label>Dev - North</label>
                </value>
                <value>
                    <fullName>Dev - South</fullName>
                    <isActive>false</isActive>
                    <label>Dev - South</label>
                </value>
                <value>
                    <fullName>Distributed</fullName>
                    <isActive>false</isActive>
                    <label>Distributed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COD_Date__c</fullName>
        <label>COD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COD_Specifications__c</fullName>
        <inlineHelpText>The latest possible COD, according to the company&apos;s RFP.
Required for Origination Opps when Stage = &apos;Proposal Preparation&apos;.</inlineHelpText>
        <label>COD Specifications</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COGS__c</fullName>
        <description>= Amount - Margin</description>
        <formula>Amount -  Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COGS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_MW__c</fullName>
        <label>Capacity (MW)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Reason_Notes__c</fullName>
        <inlineHelpText>Notes describing why a particular Opportunity was Closed Lost or Closed Won</inlineHelpText>
        <label>Closed Reason Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Status__c</fullName>
        <label>Closed Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>In Construction</fullName>
                </value>
                <value>
                    <fullName>COD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collections_Amount__c</fullName>
        <label>Collections Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>In order to keep the &apos;Description&apos; field concise, please use this &apos;Comments&apos; field to elaborate if need be.</inlineHelpText>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Completion_Date__c</fullName>
        <inlineHelpText>This field was originally the Construction Completion Date, but for clarity, we now have 2 fields, which are more specific...A &apos;Substantial Completion Date&apos; field AND a &apos;Final Completion Date&apos; field.</inlineHelpText>
        <label>Substantial Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This look-ups &apos;CONTACT&apos;S&apos; (not SF Users). Therefore a Contact must already have been created on either the &apos;RES T&amp;D&apos; Account, or on one of the &apos;Renewable Energy System&apos; Accounts.</inlineHelpText>
        <label>Construction Director</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please check that this CONTACT has been created on either the &apos;RES T&amp;D&apos; Account, or on one of the &apos;Renewable Energy System&apos; Accounts.</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>RES T&amp;D</value>
            </filterItems>
            <infoMessage>Add a Construction Director from CONTACTS (not SF Users) -- This lookup field limits the results of Contacts to only those staff who exist in an Account with &apos;Renewable Energy Systems&apos; or &apos;RES T&amp;D&apos; in the name.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Construction Director)</relationshipLabel>
        <relationshipName>Construction_Director_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Mobilisation_Fee__c</fullName>
        <label>Construction Mobilisation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Services_Fee__c</fullName>
        <label>Construction Services Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Start__c</fullName>
        <inlineHelpText>Date Construction Begins</inlineHelpText>
        <label>Construction Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This look-ups &apos;CONTACT&apos;S&apos; (not SF Users). Therefore a Contact must already have been created on one of the &apos;Renewable Energy System&apos; Accounts, or the &apos;RES T&amp;D&apos; Account.</inlineHelpText>
        <label>Construction VP</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please check that this CONTACT has been created on either the &apos;RES T&amp;D&apos; Account, or on one of the &apos;Renewable Energy System&apos; Accounts.</errorMessage>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Renewable Energy Systems</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>RES T&amp;D</value>
            </filterItems>
            <infoMessage>Add a Construction VP from CONTACTS (not SF Users) -- This lookup field limits the results of Contacts to only those staff who exist in an Account with &apos;Renewable Energy Systems&apos; or &apos;RES T&amp;D&apos; in the name.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Construction VP)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>ADDMONTHS( Contract_Start_Date__c , Term_Months__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When we expect to end work on the project.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created to identify if an opportunity is a renewal of an existing agreement with RES.</description>
        <inlineHelpText>Is this a renewal of an existing agreement with RES?</inlineHelpText>
        <label>Contract Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Support Services EMEA Specific Field</description>
        <inlineHelpText>When we expect to start work on the project.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asset Purchase</fullName>
                </value>
                <value>
                    <fullName>Asset Sale</fullName>
                </value>
                <value>
                    <fullName>Auction</fullName>
                </value>
                <value>
                    <fullName>BOP/BOS</fullName>
                </value>
                <value>
                    <fullName>BOT</fullName>
                </value>
                <value>
                    <fullName>Construction Only</fullName>
                </value>
                <value>
                    <fullName>DPA</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>EPCM</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Partner / JV</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>SPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <inlineHelpText>Link to the Final Service Agreement</inlineHelpText>
        <label>Contract</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ConvertedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConvertedFromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentFiscalYear__c</fullName>
        <description>Used in Account Rollup: # of Opps Won Current FY</description>
        <formula>IF(
IF( MONTH( Today() ) &gt;= 11, 
( (YEAR( Today() )+ 1)), 
( (YEAR( Today() )) 
)) =
IF( MONTH( CloseDate ) &gt;= 11, 
( (YEAR( CloseDate )+ 1)), 
( (YEAR( CloseDate )) 
)),
1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula inputs a 1 if the Opportunity Close Date is within the Current FY.
It&apos;s 0, if it&apos;s not within that time frame.</inlineHelpText>
        <label>CurrentFiscalYear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_AC_Ratio__c</fullName>
        <label>DC/AC Ratio</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>